# exposurecheck

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml
docs/: ABUSE-EVAL.md  THREAT-MODEL.md
exposurecheck/: __init__.py  audit.py  cli.py  models.py
exposurecheck/backends/: _mask.py  base.py  llm.py
exposurecheck/cascade/: __init__.py  summarize.py
exposurecheck/metadata/: exif.py
exposurecheck/output/: __init__.py  interactive.py  report.py
exposurecheck/parsers/: __init__.py  _source.py  twitter.py
exposurecheck/remediation/: advise.py
exposurecheck/risk/: card.py  categories.py
exposurecheck/safety/: __init__.py  consent.py  offline.py  warnings.py
media/: demo.cast
scripts/: git-commit-utc.sh
selfaudit/: __init__.py  cli.py  models.py
selfaudit/backends/: __init__.py  base.py  heuristic.py  llm.py  transports.py
selfaudit/cascade/: deterministic.py  pipeline.py  prefilter.py  summarize.py
selfaudit/metadata/: __init__.py  exif.py
selfaudit/output/: interactive.py  report.py
selfaudit/parsers/: _source.py  _util.py  reddit.py
selfaudit/remediation/: __init__.py
selfaudit/risk/: __init__.py  categories.py  scoring.py
selfaudit/safety/: warnings.py
tests/: _make_abuse_eval_export.py  _make_exif_fixture.py  test_cascade.py  test_cli_errors.py  test_exif_hardening.py  test_llm_backend.py  test_no_dossier.py  test_offline.py  test_parsers.py  test_safety.py
tests/fixtures/abuse_eval/reddit/: comments.csv  posts.csv
tests/fixtures/abuse_eval/twitter/data/: account.js  profile.js  tweets.js
tests/fixtures/reddit_sample/: comments.csv  posts.csv
tests/fixtures/twitter_sample/data/: account.js  profile.js  tweets.js
